--- a/trunk/mpakdump2/mpakdump2/mpakdump2.vcproj
+++ b/trunk/mpakdump2/mpakdump2/mpakdump2.vcproj
@@ -178,6 +178,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\pack.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\stdafx.cpp"
 				>
 				<FileConfiguration
@@ -197,12 +201,20 @@
 					/>
 				</FileConfiguration>
 			</File>
+			<File
+				RelativePath=".\unpack.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\dirent.h"
+				>
+			</File>
 			<File
 				RelativePath=".\stdafx.h"
 				>
